# palettes-rust

./: .gitignore  Cargo.toml  build.rs
cases/: simple.toml
kernels/: cuda.cu  pedestrians.cu  types.h
src/: main.rs  renderer.rs  shader.wgsl  types.rs
src/pedestrian/: gate.rs  mod.rs  pedestrian.rs  wall.rs
src/renderer/: camera.rs  mod.rs  shader.wgsl
src/simulator/: config.rs  gate.rs  mod.rs  pedestrian.rs  wall.rs
