[package]
name = "palettes-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = { version = "1.15.0", features = ["derive"] }
eframe = { version = "0.27.2", features = ["wgpu"] }
egui-wgpu = "0.27.2"
env_logger = "0.11.3"
fastrand = "2.0.2"
libc = "0.2.154"
nalgebra = { version = "0.32.5", features = ["serde", "serde-serialize"] }
rayon = "1.10.0"
serde = { version = "1.0.198", features = ["derive"] }
toml = "0.8.12"

[profile.dev]
opt-level = 3

[profile.dev.package."*"]
opt-level = 3

[build-dependencies]
cc = "1.0.96"

[features]
gpu = []
